fixed overflowing on mobile devices /test

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1rem;
+    font-family: var(--main-font-poppins345);
 }
 
 body{
@@ -68,9 +70,6 @@ form input[type='text']{
     border: 1px solid var(--main-cyan);
     border-radius: 6px;
     background: var(--semilight-grayish-cyan);
-
-    font-size: 1rem;
-    font-family: var(--main-font-poppins345);
   
     
 }
@@ -120,7 +119,6 @@ button{
     height: 3rem;
     width: 100%;
     color: var(--White);
-    font-family: var(--main-font-poppins345);
     font-weight: 400;
     background-color: var(--very-dark-cyan);
     border-radius: 5px;
@@ -136,7 +134,6 @@ button{
     height: 3rem;
     width: 100%;
     color: var(--White);
-    font-family: var(--main-font-poppins345);
     font-weight: 400;
     background-color: var(--very-dark-cyan);
     border-radius: 5px;
@@ -168,15 +165,13 @@ button{
     border: 1px solid var(--main-cyan);
     border-radius: 6px;
     background: var(--semilight-grayish-cyan);
-
-    font-size: 1rem;
-    font-family: var(--main-font-poppins345);
 }
 
 .todoShit input[type='checkbox'], .todoDone input[type='checkbox']{
 
     cursor: pointer;
     accent-color: var(--main-cyan);
+
 }
 
 
@@ -208,7 +203,6 @@ button{
 .trash, 
 .edit, 
 .submit{
-    font-size: 1rem;
     color: var(--White);
     cursor: pointer;
 }
@@ -237,3 +231,16 @@ button{
     color: var(--main-cyan);
 }
 
+@media screen and (max-width: 700px) and (min-width: 280px){
+    
+    .main{
+        width: 100%;
+    }
+    .plus__holder{
+        right: 10px;
+    }
+    .todoDone::before{
+        
+        width: 50%;
+    }
+}
